--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,6 @@
 # RStudio files
 .Rproj.user/
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
 # knitr and R markdown default cache directories
 *_cache/
 /cache/
@@ -39,16 +32,8 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
-
 output/
+output_qc/
 data/
 
 *.png
@@ -59,3 +44,4 @@ data/
 slurm*
 slurm/
 *.log
+.snakemake
