Update qc rule in pipeline!

--- a/config_qc.yaml
+++ b/config_qc.yaml
@@ -1,5 +1,4 @@
 # paths
-working_path: "/home/dariush.ghasemi/projects/pqtl_pipeline_ldsc"
-sumstat_path: "/group/diangelantonio/users/alessia_mapelli/QC_gen_INTERVAL/QC_steps/StepB/New_analysis"
-sumstat_file: "/recomputed_stats/recoded/snp-stats_chr{chrom}.txt"
-variant_list: "/home/dariush.ghasemi/projects" ##/Variants_QC/recoded" #
+sumstat_path: "/group/diangelantonio/users/alessia_mapelli/QC_gen_INTERVAL/QC_steps/StepB/New_analysis/recomputed_stats/recoded"
+report_path:  "/group/diangelantonio/users/alessia_mapelli/QC_gen_INTERVAL/QC_steps/StepB/New_analysis/Variants_QC/recoded"
+#variant_list: "/home/dariush.ghasemi/projects/pqtl_pipeline_ldsc"
