Working on munging rule!

--- a/conf/config_ldsc.yaml
+++ b/conf/config_ldsc.yaml
@@ -2,3 +2,4 @@ path_base: "/home/dariush.ghasemi/projects/pqtl_pipeline_ldsc"
 path_ldsc: "/home/dariush.ghasemi/bin/ldsc"
 path_data: "/scratch/giulia.pontali/test_snakemake/genomics_QC_pipeline/results"
 path_geno: "/scratch/dariush.ghasemi/genotype/imputed/plink"
+path_pwas: "/exchange/healthds/pQTL/results/INTERVAL/chunk_1083/chunk_1083_output/chunk_1083/results"
